@@ -105,7 +105,6 @@ Die Steuerung über Controller kann im Hauptmenü unter "Einstellungen" - "Steue
 Derzeit werden folgende Controller unterstützt:
 
 * Xbox 360 Controller
-* Rii USB Classic Controller
 
 Weitere Modelle können funktionieren, wurden von mir aber nicht getestet.
 
