@@ -12,6 +12,7 @@
 
 * Global: Äpfel hinzugefügt
 * Global: "Beep" Soundeffekt ersetzt
+* Global: Support für Rii USB Classic Controller entfernt
 
 ## Global: Alpha 013 (Unreleased)
 
